# aiogram-sentinel

./: .gitignore  CONTRIBUTING.md  README.md  ci_workflow_summary.md  code_quality_report.md  coverage_report.md  mkdocs.yml  pr_data.json  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  manual-release.yml  pr-management.yml  release.yml  semantic-release.yml
docs/: ARCHITECTURE.md  ROADMAP.md  SECURITY.md  faq.md  index.md  installation.md  quickstart.md  troubleshooting.md
docs/api/: core.md  storage.md
examples/: minimal_bot.py
src/aiogram_sentinel/: __init__.py  config.py  context.py  decorators.py  events.py  exceptions.py  policy.py  scopes.py  sentinel.py  types.py  version.py
src/aiogram_sentinel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/aiogram_sentinel/middlewares/: __init__.py  auth.py  blocking.py  debouncing.py  policy_resolver.py  throttling.py
src/aiogram_sentinel/routers/: my_chat_member.py
src/aiogram_sentinel/storage/: __init__.py  base.py  factory.py  memory.py  redis.py
src/aiogram_sentinel/utils/: keys.py
tests/: conftest.py
tests/integration/: conftest.py  test_policy_integration.py  test_redis_backends.py
tests/perf/: test_benchmarks.py  test_perf_memory_paths.py
tests/unit/: test_blocklist_memory.py  test_context.py  test_debounce_memory.py  test_event_bus.py  test_key_builder.py  test_middlewares_auth.py  test_middlewares_blocking.py  test_middlewares_debounce.py  test_middlewares_throttling.py  test_policy_decorator.py  test_policy_resolver.py  test_rate_memory.py  test_userrepo_memory.py
tools/: check_version_tag.py  gen_tree.py
